@@ -586,6 +586,7 @@ test_sources = Split("""
     tests/test_team.cpp
     tests/test_unit_map.cpp
     tests/test_util.cpp
+    tests/test_sdl_utils.cpp
     tests/test_serialization.cpp
     tests/test_version.cpp
     tests/gui/fire_event.cpp
