@@ -174,6 +174,8 @@ Version 1.11.0-svn:
    * Make Wolf Rider and Wolf raise their heads if and only if unit is
      submerged: forums.wesnoth.org/viewtopic.php?f=4&t=36212
    * Changed: Add a small cache for reading files, giving a minor improvement.
+   * Added: Helper tool to create images for unit tests.
+   * Added: Image manipulation unit tests.
 
 Version 1.10.0:
  * Campaigns:
